Update: minor changes