@@ -22,22 +22,19 @@ public class UrlService {
         if (originalUrl == null || originalUrl.isEmpty()) {
             throw new IllegalArgumentException("(e) Original URL cannot be null or empty.");
         }
-        String decodedUrl = "";
-        String encodedUrl = "";
+        String decodedUrl, encodedUrl = "";
         // Decode the URL if it's encoded
         try {
             decodedUrl = URLDecoder.decode(originalUrl, StandardCharsets.UTF_8.name());
         } catch (UnsupportedEncodingException e) {
             throw new RuntimeException(e);
         }
-
         // Check if the URL already exists in the database
         Url existingUrl = urlRepository.findByOriginalUrl(decodedUrl);
         if (existingUrl != null) {
             return existingUrl.getShortUrl();
         }
-
-        // Generate a random short code (e.g., 8 characters long)
+        // Generate a random short code (8 characters long)
         String shortUrl;
         do {
             shortUrl = RandomStringUtils.randomAlphanumeric(8);
@@ -58,13 +55,11 @@ public class UrlService {
         return shortUrl;
     }
 
-
     public String getOriginalUrl(String shortUrl) throws UnsupportedEncodingException {
         Url url = urlRepository.findByShortUrl(shortUrl);
         if (url != null) {
             // Decode the URL before returning it
-            String rawUrl = URLDecoder.decode(url.getOriginalUrl(), StandardCharsets.UTF_8.name());
-
+            String rawUrl = URLDecoder.decode(url.getOriginalUrl(), StandardCharsets.UTF_8);
             StringBuilder newOriginalUrl = new StringBuilder();
 
             for(char c: rawUrl.toCharArray()){
@@ -72,8 +67,6 @@ public class UrlService {
                     newOriginalUrl.append(c);
                 }
             }
-
-
             return newOriginalUrl.toString();
         }
         return null;
